--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: '><'
-subtitle: Random stuff about programming and machine learning
+title: '>< Hi I am Yiran 徐逸然'
+subtitle: Mainly Random stuff I learned about programming and machine learning
 use-site-title: true
 ---
 
